--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en-US" class="mahalo">
 <meta charset="utf-8">
 
-<title>mahalo</title>
+<title>helmet muracle</title>
 
 <meta name="viewport" content="width=device-width">
 <meta name="theme-color" content="magenta">
 <meta name="color-scheme" content="dark">
-<meta name="description" content="gratitude magma">
+<meta name="description" content="wear your hell melt">
 
 <link rel="stylesheet" href="magma.css" media=(color)>
 <link rel="stylesheet" href="mahalo.css" media=all>
@@ -15,16 +15,12 @@
 <base href="https://webmural.com">
 <body class="vessel">
 
-<article class="volcano">
-  <h1 class="aloha">ma<a href="/halo">halo</a></h1>
-  there are <a href="/music">sum</a>
-  <a href="/css">hue</a>
-  <a href="/bee">believe</a>
-  mahalo is made from
-  <a href="/magma">magma</a>
-  erupting <a href="/octopus">creativity</a>
-  from somewhere deep as
-  gratitude for being free
-  to <a href="/dance">dance</a>
-  with passion
+<article class="helmet">
+  <h1 class="aloha">
+    <a href="/mahalo">please</a>
+  </h1>
+  <a href="/music">w<b>ear</b></a>
+  <a href="/eleo">your</a><br>
+  <a href="/spellbound">hell</a>
+  <a href="/gerbera">melt</a>
 </article>
