--- a/index.html
+++ b/index.html
@@ -24,3 +24,13 @@
   <a href="/spellbound">hell</a>
   <a href="/gerbera">melt</a>
 </article>
+
+<article class="helmet smelt">
+  <h1 class="aloha">
+    <a href="/mahalo">pleaze</a>
+  </h1>
+  <a href="/music">w<b>ear</b></a>
+  <a href="/eleo">your</a><br>
+  <a href="/mussel">shell</a>
+  <a href="/gerbera">melt</a>
+</article>
