helmet your heart win

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 
 <article class="helmet smelt">
   <h1 class="aloha">
-    <a href="/mahalo">pleaze</a>
+    <a href="/depth">pleaze</a>
   </h1>
-  <a href="/music">w<b>ear</b></a>
-  <a href="/eleo">your</a><br>
+  <a href="/fable">w<b>ear</b></a>
+  <a href="/halo">your</a><br>
   <a href="/mussel">shell</a>
   <a href="/gerbera">melt</a>
 </article>
