--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <base href="https://webmural.com">
 <body class="vessel">
 
-<article class="helmet">
+<article class="helmet" id="please">
   <h1 class="aloha">
     <a href="/mahalo">please</a>
   </h1>
@@ -25,7 +25,7 @@
   <a href="/gerbera">melt</a>
 </article>
 
-<article class="helmet smelt">
+<article class="helmet smelt" id="pleaze">
   <h1 class="aloha">
     <a href="/depth">pleaze</a>
   </h1>
