--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <base href="https://webmural.com">
 <body class="vessel">
 
-<article class="helmet" id="please">
+<article class="helmet" id="uv">
   <h1 class="aloha">
     <a href="/mahalo">please</a>
   </h1>
@@ -25,12 +25,12 @@
   <a href="/gerbera">melt</a>
 </article>
 
-<article class="helmet smelt" id="pleaze">
+<article class="helmet smelt" id="hz">
   <h1 class="aloha">
     <a href="/depth">pleaze</a>
   </h1>
   <a href="/fable">w<b>ear</b></a>
   <a href="/halo">your</a><br>
-  <a href="/mussel">shell</a>
+  <a href="/mussel"><ins>s</ins>hell</a>
   <a href="/gerbera">melt</a>
 </article>
