--- a/index.html
+++ b/index.html
@@ -15,12 +15,22 @@
 <base href="https://webmural.com">
 <body class="vessel">
 
-<article class="helmet">
+<article class="helmet" id="uv">
   <h1 class="aloha">
     <a href="/mahalo">please</a>
   </h1>
   <a href="/music">w<b>ear</b></a>
   <a href="/eleo">your</a><br>
   <a href="/spellbound">hell</a>
+  <a href="/gerbera">melt</a>
+</article>
+
+<article class="helmet smelt" id="hz">
+  <h1 class="aloha">
+    <a href="/depth">pleaze</a>
+  </h1>
+  <a href="/fable">w<b>ear</b></a>
+  <a href="/halo">your</a><br>
+  <a href="/mussel"><ins>s</ins>hell</a>
   <a href="/gerbera">melt</a>
 </article>
